css/stylesheet.css
/* CSS Document */
.page {
  overflow: auto;
  background: #078CA2;
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
}
.teacher-card-image.mdl-card {
  width: 256px;
  height: 256px;

}
.teacher-card-image > .mdl-card__actions {
  height: 52px;
  padding: 16px;
  background: rgba(237, 7, 38, 0.8);
}
.teacher-card-image__filename {
  color: #fff;
  font-size: 14px;
  font-weight: 500;
}

.teacher-card-square.mdl-card {
  width: 256px;
  height: 256px;
  margin: 10px auto;
    position:fixed;
  top: 50%;
  left: 50% ;
  margin-left:-128px;
  margin-top:-128px;
}
.teacher-card-square > .mdl-card__title {
  color: #fff;
}
.teacher-Bryce {
  background: url('../images/bryce.jpg') center / cover;
}
.teacher-Rene {
  background: url('../images/rene.jpg') top / cover;
}
.teacher-Ryan {
  background: url('../images/ryan.jpg') center / cover;
}
.teacher-none {
  background: url('../images/na.jpg') center / cover;
}
.mdl-button--fab.mdl-button--colored {
  background: rgb(237, 7, 38);
  color: #fff;
}
.controls {
  width:100%;
  max-width : 600px;
  padding: 20px;
  display: flex;
  margin: 20px auto;
}
.controls > button {
  width:33%;
  min-width: 100px;
  vertical-align: middle;
}

@media screen and (max-width: 500px) {
.controls {
  width: 100%;
  padding: 20px;
  margin: 20px auto;
}
}

